<resources>
    <!-- login and signup -->
    <string name="app_name">Ryde</string>
    <string name="Login">Login</string>
    <string name="User">Username:</string>
    <string name="Password">Password:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone Number:</string>
    <string name="driver">Do you also want to sign up as a driver?</string>
    <string name="createNew">Create a new account</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="request">Confirm Request</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addDriverInfo">Add driver info:</string>
    <string name="enterVehicle">Enter your vehicle description.</string>

    <!-- activity_maps -->
    <string name="search">Search</string>
    <string name="search2">Start Location</string>
    <string name="search3">End Location</string>


    <!-- my_ride_requests -->
    <string name="open_list_request">Open Request List</string>
    <string name="no_open">No open requests.</string>
    <string name="offer">Ongoings</string>
    <string name="no_offer">No ongoing requests.</string>
    <string name="closed_request_list">Closed Request List</string>
    <string name="no_closed">No closed requests.</string>

    <!-- available_drivers -->
    <string name="no_drivers">No available drivers.</string>

    <!-- profile_info -->
    <string name="call">Call</string>
    <string name="Email">Email</string>
    <string name="vehicleInfo">Vehicle Info:</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>

    <!-- ride_info -->
    <string name="desc">Description:</string>
    <string name="rider">Rider: </string>
    <string name="Driver">Driver: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="status">Status: </string>
    <string name="est">Fee Estimate: </string>
    <string name="riderClick">Check to see Rider Profile</string>
    <string name="driverClick">Check to see Driver Profile</string>
    <string name="driversClick">Check to see available Drivers</string>
    <string name="completeRequest">Complete Request</string>
    <string name="cancelRequest">Cancel Request</string>
    <string name="interestRequest">Interested</string>
    <string name="interestCancel">Not Interested</string>
    <string name="awaitRider">Awaiting Rider to Complete...</string>

    <!-- search_requests -->
    <string name="searchRequest">Search Request&#8230;</string>
    <string name="searchLocation">Search by address</string>
    <string name="searchKeyword">Search by description</string>
    <string name="searchNearby">Search Nearby</string>
    <string name="refresh">Refresh</string>
    <string name="unavailable">unavailable</string>
    <string name="editTitle">Edit Contact Info</string>
    <string name="title_activity_rider_main">RiderMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="new_request">Create New Request</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_ride_request_remake">MyRideRequestRemake</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="distanceFormat">%d km</string>
    <string name="priceFormat">$%1$d</string>
    <string name="distance">Price/km</string>
    <string name="price">Price</string>

    <!-- rider_confirm_driver -->
    <string name="confirm">Confirm Driver</string>


</resources>
