<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.SignupActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/userTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText android:id="@+id/userEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userTextView"
            android:inputType="text"
            android:textSize="20sp"/>

        <TextView android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:layout_below="@id/userEditText"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <EditText android:id="@+id/passwordEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextView"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <TextView android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <EditText android:id="@+id/emailEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>


        <TextView android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_below="@id/emailEditText"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <EditText android:id="@+id/phoneEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneTextView"
            android:inputType="phone"
            android:textSize="20sp"/>

        <TextView android:id="@+id/driverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:layout_below="@id/phoneEditText"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/driverTextView"
            android:layout_marginTop="10dp">
            <RadioButton android:id="@+id/radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/vehicleInfoPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:visibility="gone">
            <TextView
                android:text="@string/vehicleInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicleInfo"
                android:textSize="20sp" />

            <EditText
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:id="@+id/vehicleYear"
                android:layout_below="@+id/vehicleInfo"
                android:hint="@string/year" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/vehicleMake"
                android:hint="@string/make"
                android:layout_below="@+id/vehicleYear"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/vehicleModel"
                android:hint="@string/model"
                android:layout_below="@+id/vehicleMake" />

        </RelativeLayout>

        <LinearLayout android:id="@+id/signUpGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicleInfoPanel"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/signupButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelButton"  />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
