<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.ProfileInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- username -->
            <TextView android:id="@+id/userTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User"
                android:layout_marginTop="10dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/userTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- email -->
            <TextView android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@id/userTexts"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/emailTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- phone -->
            <TextView android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_below="@id/emailTexts"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/phoneTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTexts"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:id="@+id/callButton" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:id="@+id/emailButton"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
