<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.RideInfoFromSearch">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- MapView inside, show location markup -->
        <LinearLayout
            android:id="@+id/rideInfoLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                class="com.google.android.gms.maps.SupportMapFragment" />

            <!-- MapView inside -->

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rideInfoLayout">

            <!-- description -->
            <TextView android:id="@+id/descTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:layout_marginTop="10dp"
                android:textSize="24sp"/>
            <TextView android:id="@+id/descTexts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- rider info -->
            <TextView android:id="@+id/riderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rider"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:layout_below="@id/descTexts"/>

            <TextView android:id="@+id/riderUsernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/riderTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <TextView android:id="@+id/riderClickText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/riderUsernameText"
                android:text="@string/riderClick"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:textColor="#ff0000ff"
                android:onClick="onClick"
                android:clickable="true"/>

            <!-- From -->
            <TextView android:id="@+id/fromTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_below="@id/riderClickText"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/fromTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fromTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- to -->
            <TextView android:id="@+id/toTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_below="@id/fromTexts"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/toTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- status -->
            <TextView android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_below="@id/toTexts"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/statusTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/statusTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- fee -->
            <TextView android:id="@+id/estTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/est"
                android:layout_below="@id/statusTexts"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/estTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/estTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- price/fee -->
            <TextView android:id="@+id/ppkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppk"
                android:layout_below="@id/estTexts"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView android:id="@+id/ppkTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ppkTextView"
                android:text="@string/unavailable"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"/>

            <!-- buttons -->

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/interestRequest"
                android:id="@+id/interestButton"
                android:layout_below="@id/ppkTexts"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/completeRequest"
                android:id="@+id/completeButton"
                android:layout_below="@id/interestButton"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"/>

            <TextView android:id="@+id/awaitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awaitRider"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/completeButton"
                android:layout_centerInParent="true"/>


        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
